--- a/bin/main/static/css/writeday.css
+++ b/bin/main/static/css/writeday.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+</style>
+
 #tit{
     width:650px;
     height:auto;
@@ -7,7 +11,16 @@
     margin-right:auto;
     text-align:center;
 }
-        
+ .mai{
+font-family: 'Noto Sans KR', sans-serif;
+font-size: 2em;
+font-weight:300;
+}
+ .index is-preload{
+font-family: 'Noto Sans KR', sans-serif;
+font-size: 2em;
+font-weight:300;
+}
 table{
 	width:650px;
     height:auto;
@@ -26,6 +39,9 @@ td{
 }
         
 #mai{
+	font-family: 'helvetica';
+font-size: 1.25em;
+font-weight:200px;
 	margin-left:0px;
    background-color: #FFFFFF;
    border-bottom: 1px solid white;
@@ -57,7 +73,7 @@ html {
 	margin: 0;
     height: 100%;
     background: #FFFFFF;
-    font-family: Dotum,'돋움',Helvetica,sans-serif;
+    font-family: font-family: 'Noto Sans KR', sans-serif; /*  Dotum,'돋움',Helvetica,sans-serif; */
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -69,6 +85,7 @@ html {
 			-webkit-transition: none !important;
 			-ms-transition: none !important;
 			transition: none !important;
+			font-family:'Noto Sans KR', sans-serif;
 		}
 		
 		
@@ -181,4 +198,3 @@ html {
 				}
 
 		}
-		
