--- a/bin/main/templates/QnA/detail.html
+++ b/bin/main/templates/QnA/detail.html
@@ -7,15 +7,17 @@
 </head>
 <body>
 <header th:insert="com/header.html"></header>
+<br><br><br>
+
 <div class="container">
     <div class="card">
         <div class="card-body">
             <h5 class="card-title" th:text="@{${post.title} + ' - ' + ${post.id}}"></h5>
             <p class="card-text"><small class="text-muted" th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm')}"></small></p>
             <p class="card-text" th:text="${post.content}"></p>
-            <div th:if="${post.fileId != null}">
+            <div>
                 <strong>첨부파일 : </strong>
-                <a class="card-text" th:href="@{'/QnAdownload/' + ${post.fileId}}" th:text="${post.fileId}"></a>
+                <a class="card-text" th:href="@{'/QnAdownload/' + ${post.fileId}}" th:text="${file.origFilename}"></a>
             </div>
         </div>
     </div>
@@ -29,11 +31,12 @@
                 <input type="hidden" name="_method" value="delete"/>
                 <button id="delete-btn" type="submit" class="btn btn-danger">삭제</button>
                 
-               <footer th:insert="com/footer.html"></footer>
+               
             </form>
         </div>
     </div>
 </div>
+<footer th:insert="com/footer.html"></footer>
 <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
 <script src="/webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
