--- a/bin/main/templates/QnA/edit.html
+++ b/bin/main/templates/QnA/edit.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <header th:insert="com/header.html"></header>
+<br><br><br>
 <div class="container">
     <form th:action="@{'/write/edit/' + ${post.no}}" method="post">
         <input type="hidden" name="_method" value="put"/>
@@ -26,7 +27,7 @@
         <div class="form-group row">
             <label for="inputContent" class="col-sm-2 col-form-label"><strong>내용</strong></label>
             <div class="col-sm-10">
-                <textarea type="text" name="content" class="form-control" id="inputContent"th:value="${post.content}"></textarea>
+                <textarea type="text" name="content" class="form-control" id="inputContent"th:value="${post.content}" style="height: 400px"></textarea>
             </div>
         </div>
         <div class="row">
