--- a/bin/main/templates/will/edit.html
+++ b/bin/main/templates/will/edit.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <header th:insert="com/header.html"></header>
+<br><br><br>
 <div class="container">
     <form th:action="@{'/createwill/edit/' + ${post.no}}" method="post">
         <input type="hidden" name="_method" value="put"/>
@@ -26,18 +27,38 @@
         <div class="form-group row">
             <label for="inputContent" class="col-sm-2 col-form-label"><strong>내용</strong></label>
             <div class="col-sm-10">
-                <textarea type="text" name="content" class="form-control" id="inputContent"th:value="${post.content}"></textarea>
+                <textarea type="text" name="content" class="form-control" id="inputContent" th:placeholder="${post.content}" style="height: 400px"></textarea>
+            </div>
+        </div>
+          <div class="form-group row">
+            <label for="inputFile" class="col-sm-2 col-form-label"><strong>첨부 파일</strong></label>
+            <div class="col-sm-10">
+                <div class="custom-file" id="inputFile">
+                    <input name="file" type="file" class="custom-file-input" id="customFile">
+                    <label class="custom-file-label" for="customFile">파일을 선택해 주세요.</label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputFile" class="col-sm-2 col-form-label"><strong>등록된 파일</strong></label>
+            <div class="col-sm-10">
+                <div class="custom-file" id="inputFile">
+                    <a class="card-text" th:href="@{'/download/' + ${post.fileId}}" th:text="${file.origFilename}"></a>
+                    <a class="card-text" th:herf="@{'/edit/' + ${file.id}}"><img src="/images/xbutton.png" alt="로드불가" height="10px" width="10px"/></a>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="col-auto mr-auto"></div>
             <div class="col-auto">
                 <input class="btn btn-primary" type="submit" role="button" value="수정">
+                <a class="btn btn-primary" th:href="@{/user/will/list}" role="button">취소</a>
             </div>
         </div>
-        <footer th:insert="com/footer.html"></footer>
+        
     </form>
 </div>
+<footer th:insert="com/footer.html"></footer>
 <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
 <script src="/webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
