--- a/bin/main/templates/logintool/signup.html
+++ b/bin/main/templates/logintool/signup.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 <meta charset="UTF-8">
-<title>Will : 회원가입</title>
+<title>Will : 약관동의</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
      <link  href="../static/css/agreement1.css" rel="stylesheet"  th:href="@{/css/agreement1.css}" />
 		<noscript><link rel="stylesheet" href="static/css/noscript.css" /></noscript>
