--- a/bin/main/templates/index2.html
+++ b/bin/main/templates/index2.html
@@ -5,7 +5,7 @@
 
 	<head>
 	
-		<title>Twenty by HTML5 UP</title>
+		<title>Will : 메인</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link  href="../static/css/main.css" rel="stylesheet"  th:href="@{/css/main.css}" />
