--- a/src/main/resources/templates/logintool/login.html
+++ b/src/main/resources/templates/logintool/login.html
@@ -11,11 +11,12 @@
 		<noscript><link rel="stylesheet" href="static/css/noscript.css" /></noscript>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>로그인 </title>
+    <title>Will : 로그인</title>
 </head>
 <body cellpadding="0" cellspacing="0" marginleft="0" background-color="white" margintop="0" width="100%" height="100%" align="center">
     <h1 id="logo" align="center"><a th:href="@{'/'}"><img src="../images/logo.jpg" alt="로드불가" height="80px" width="110px" margin-bottom="30px"/></a></h1>
-    <hr>
+    <br>
+    <br>
 
 
   
@@ -73,20 +74,21 @@
 	<div class="card align-middle" style="width:30rem; border-radius:10px;">
 	
 		<div class="card-title" style="margin-top:10px;">
-			<span><h2 class="card-title text-center" style="color:#113366;">로그인 </h2>
-			<input id="btn" type="checkbox" onclick="location.href='http://localhost:8886/user/login1'">변호사
+			<span><h2 class="card-title text-center" style="color:black;">로그인 </h2>
+			<input id="btn" style="margin-left:20px;" type="checkbox" onclick="location.href='http://localhost:8886/user/login1'"><b>변호사
 			
 			<!-- <a th:href="@{/user/login1}" id="btn" type="button" class="btn-btn-primary" role="button">변호사</a> --></spen>
 		</div>
 		<div class="card-body">
-         <h5 class="form-signin-heading">정보를 입력하세요</h5>
+         <h5 class="form-signin-heading"></h5>
         <label for="inputid" class="sr-only">Your ID</label>
-        <input type="text" id="id" name="username" class="form-control" placeholder="Your ID" required autofocus><BR>
+        <input type="text" id="id" name="username" class="form-control" placeholder="아이디" required autofocus><BR>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required><br>
+        <input type="password" id="password" name="password" class="form-control" placeholder="비밀번호" required><br>
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="remember-me"> ID 기억하기
+            <input type="checkbox" value="remember-me"> 아이디 유지하기
+            
           </label>
         </div>
         <button id="btn-Yes" class="btn btn-lg btn-primary btn-block" style="background-color:#b96c5f" type="submit">로 그 인</button>
