--- a/src/main/resources/templates/com/header.html
+++ b/src/main/resources/templates/com/header.html
@@ -14,52 +14,58 @@
 	<body class="index is-preload">
 		<div id="page-wrapper">
 
-					<!-- Header -->
+						<!-- Header -->
 				<header id="header">
 					<h1 id="logo"><a th:href="@{'/'}">Will</a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a th:href="@{/}">Welcome</a></li>
+							<li id="create"><a sec:authorize="isAuthenticated()" th:href="@{/user/createwill}">문서작성</a></li>
 							<li class="submenu">
 								<a href="#">Layouts</a>
 								<ul>
-									<li><a th:href="@{guidance.html}">절차안내</a></li>
+									<li><a sec:authorize="isAnonymous()" th:href="@{/guidance}">절차안내</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								
 								</ul>
 							</li>
-							
-						 
-                       
-                        
-							
+	
 							<li class="submenu">
 								<a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
    								<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/uesr/admin}">어드민</a>
 							</li>&nbsp;
 
-										  <li class="submenu">
+								
+			
+		
+		
+			<li class="submenu">
                         <a sec:authorize="isAuthenticated()" > <span sec:authentication="name"></span>님</a>
                         
-                         <ul>
-                           <li><a sec:authorize="isAuthenticated()" th:href=" @{/user/info}">내 정보</a></li>
-                           <li><a sec:authorize="isAuthenticated()" th:href=" @{/user/info}">진행 상황 보기</a></li>
-                           <li><a sec:authorize="isAuthenticated()" th:href="@{/user/createwill}">문서작성</a></li>
-                           <li><a sec:authorize="isAuthenticated()" th:href="@{/user/QnA/list}">Q&A</a></li>
-                           <li><a sec:authorize="isAuthenticated()" th:href="@{/user/info}">전자 서명</a></li>
-                        </ul>  
-										
-
+                    
+                           <ul>
+                           <li><a sec:authorize="isAuthenticated()" th:href=" @{/user/info}">내 정보</a></li>                          
+           <!--                 <li><a sec:authorize="isAuthenticated()" th:href="@{/user/createwill}">문서작성</a></li> -->
+ 
+                        </ul>   
+                       
+                        
+                  
+		
 							
-			
-
-					<li><a sec:authorize="isAnonymous()"th:href="@{/user/login}"   class="button primary">Login</a></li>
+						<li><a sec:authorize="isAnonymous()"th:href="@{/user/login}"  class="button primary">Login</a></li>
 						<li><a sec:authorize="isAuthenticated()" th:href="@{/user/logout}" class="button primary">Logout</a></li>
 						</ul>
+						
+						
+						
+						
+						
+						
 					</nav>
 				</header>
+
 			
 				
 				
