--- a/src/main/resources/templates/logintool/login.html
+++ b/src/main/resources/templates/logintool/login.html
@@ -96,8 +96,10 @@
           
         </div>
         <button id="btn-Yes" class="btn btn-lg btn-primary btn-block" style="background-color:#b96c5f" type="submit">로 그 인</button>
-        <button id="btn-No" class="btn btn-lg btn-primary btn-block" style="background-color:#b96c5f" th:onclick="">비밀번호 찾기</button><br><br>
-
+        <br>
+        <div style="align-items: center;">
+        <a th:href="@{will/list}">비밀번호 찾기</a> | <a th:href="@{will/list}">아이디 찾기</a>
+		</div>
 
   			
   			
