--- a/src/main/resources/templates/will/detail.html
+++ b/src/main/resources/templates/will/detail.html
@@ -7,12 +7,15 @@
 </head>
 <body>
 <header th:insert="com/header.html"></header>
+<br><br><br>
 <div class="container">
     <div class="card">
         <div class="card-body">
             <h5 class="card-title" th:text="@{${post.title} + ' - ' + ${post.id}}"></h5>
+             <h4 style="color: black;"><strong>작성일</strong></h4>
             <p class="card-text"><small class="text-muted" th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm')}"></small></p>
-            <p class="card-text" th:text="${post.content}"></p>
+            <h4 style="color: black;"><strong>내용</strong></h4>
+            <p class="card-text" th:text="${post.content}" style="box-sizing: border-box;"></p>
             <div>
                 <strong>첨부파일 : </strong>
                 <a class="card-text" th:href="@{'/download/' + ${post.fileId}}" th:text="${file.origFilename}"></a>
