--- a/src/main/resources/templates/will/edit.html
+++ b/src/main/resources/templates/will/edit.html
@@ -21,13 +21,13 @@
         <div class="form-group row">
             <label for="inputTitle" class="col-sm-2 col-form-label"><strong>제목</strong></label>
             <div class="col-sm-10">
-                <input type="text" name="title" class="form-control" id="inputTitle" th:value="${post.title}">
+                <input type="text" name="title" class="form-control" id="inputTitle" th:value="${post.title}" required="required">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputContent" class="col-sm-2 col-form-label"><strong>내용</strong></label>
             <div class="col-sm-10">
-                <textarea type="text" name="content" class="form-control" id="inputContent" th:placeholder="${post.content}" style="height: 400px"></textarea>
+                <textarea type="text" name="content" class="form-control" id="inputContent" th:placeholder="${post.content}" style="height: 400px" required="required"></textarea>
             </div>
         </div>
           <div class="form-group row">
