--- a/src/main/resources/templates/logintool/loginSuccess.html
+++ b/src/main/resources/templates/logintool/loginSuccess.html
@@ -15,68 +15,13 @@
 		<div id="page-wrapper">
 
 							<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a th:href="@{'/'}">Will</a></h1>
-					<nav id="nav">
-						<ul>
-							<li id="create"><a sec:authorize="isAuthenticated()" th:href="@{/user/createwill}">문서작성</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a sec:authorize="isAnonymous()" th:href="@{/guidance}">절차안내</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-								
-								</ul>
-							</li>
-	
-							<li class="submenu">
-								<a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
-   								<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/uesr/admin}">어드민</a>
-							</li>&nbsp;
-
-								
-			
-		
-		
-			<li class="submenu">
-                        <a sec:authorize="isAuthenticated()" > <span sec:authentication="name"></span>님</a>
-                        
-                    
-                           <ul>
-                           <li><a sec:authorize="isAuthenticated()" th:href=" @{/user/info}">내 정보</a></li>                          
-           <!--                 <li><a sec:authorize="isAuthenticated()" th:href="@{/user/createwill}">문서작성</a></li> -->
- 
-                        </ul>   
-                       
-                        
-                  
-		
-							
-						<li><a sec:authorize="isAnonymous()"th:href="@{/user/login}"  class="button primary">Login</a></li>
-						<li><a sec:authorize="isAuthenticated()" th:href="@{/user/logout}" class="button primary">Logout</a></li>
-						</ul>
-						
-						
-						
-						
-						
-						
-					</nav>
-				</header>
+				<header th:insert="com/header.html"></header>
 
 
 
 			<!-- Banner -->
 				<section id="banner">
 
-					<!--
-						".inner" is set up as an inline-block so it automatically expands
-						in both directions to fit whatever's inside it. This means it won't
-						automatically wrap lines, so be sure to use line breaks where
-						appropriate (<br />).
-					-->
 					<div class="inner">
 
 						<header>
