lawyer member 테이블 통합 member 테이블에 proof,usertype 추가

--- a/bin/main/templates/logintool/signup3.html
+++ b/bin/main/templates/logintool/signup3.html
@@ -26,7 +26,7 @@
 
 
 
-    <form th:action="@{/user/signup1}" method="post">
+    <form th:action="@{/user/signup}" method="post">
        
  	<div id="tit">
         <br>
