--- a/src/main/resources/templates/logintool/signup3.html
+++ b/src/main/resources/templates/logintool/signup3.html
@@ -26,7 +26,7 @@
 
 
 
-    <form th:action="@{/user/signup1}" method="post">
+    <form th:action="@{/user/signup}" method="post">
        
  	<div id="tit">
         <br>
