--- a/src/main/resources/templates/logintool/signup3.html
+++ b/src/main/resources/templates/logintool/signup3.html
@@ -37,7 +37,8 @@
 
 		<div  class="buttons">
  <span>	
-				<input id="btn" type="checkbox"  onclick="location.href='http://localhost:8886/user/signup2'">일반</span>
+				<input margin-left="200px" id="btn" type="checkbox"  onclick="location.href='http://localhost:8886/user/signup2'">일반</span>
+			
 
 </div> 
 
@@ -46,14 +47,14 @@
 		<table>
                <tr>
 					<td id="mai" >이름</td> 
-					<td colspan="1" align="left">&emsp;<input type="text" name="name"
+					<td colspan="1" align="left"><input type="text" name="name"
 						autofocus="autofocus" required="required" class="from-cintol" placeholder="이름을 입력하세요">
 					</td>
 				</tr>
                         
                 <tr>
 					<td id="mai">아이디</td> 
-					<td colspan="2" align="left">&emsp;
+					<td colspan="2" align="left">
 					<input type="text"  name="id" required="required"class="userid" placeholder="Id를 입력하세요">
 	<!-- 				 <input type="button" class="myButton" id="temp" value="중복확인"> -->
 				
@@ -63,25 +64,25 @@
 
 				<tr>
 					<td id="mai">비밀번호</td>
-					<td colspan="1" align="left" >&emsp;<input type="password" name="password" maxlength="50" placeholder="비밀번호를  입력하세요">
+					<td colspan="1" align="left" ><input type="password" name="password" maxlength="50" placeholder="비밀번호를  입력하세요">
 					</td>
 				</tr>
 
-				<!-- <tr>
+				 <tr>
 					<td id="mai" >비밀번호 확인</td>
-					<td colspan="1" align="left">&emsp;<input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
+					<td colspan="1" align="left"><input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
 					</td>
-				</tr> -->
+				</tr> 
                    
              <tr>
 					<td id="mai">신분증 번호</td>
-					<td colspan="1" align="left" >&emsp;<input type="text" size="35" name="proof" maxlength="50" placeholder="변호사증 넘버을 입력하세요">
+					<td colspan="1" align="left" ><input type="text" size="35" name="proof" maxlength="50" placeholder="변호사증 넘버을 입력하세요">
 					</td>
 				</tr>
                     
                 <tr>
                     <td id="mai">이메일</td>
-                    <td colspan="1" align="left"> &emsp;
+                    <td colspan="1" align="left">
                         <input  type="text" name="email" required="required" maxlength="50">
                     </td>
                 </tr>
@@ -92,13 +93,13 @@
                     
              	<tr>
 					<td id="mai">생년월일</td> 
-					<td colspan="1" align="left"> &emsp;<input type="date" name="birthdate"
+					<td colspan="1" align="left"><input type="date" name="birthdate"
 						required="required" class="from-cintol"></td>
 				</tr>
 				
             	 <tr>
                     <td id="mai">성별</td> 
-                    <td colspan="1" align="left"> &emsp;
+                    <td colspan="1" align="left">
                         <input type="radio" name="gender" value="남" checked>남 
                         <input type="radio" name="gender" value="여" checked>여
                     </td>
@@ -108,15 +109,15 @@
      
                 <tr>
 					<td id="mai">핸드폰</td>
-				<td colspan="2" align="left"> &emsp;
+				<td colspan="2" align="left">
                         <input type="text" name="hp"  required="required" maxlength="50">
                     </td>
 					
 				</tr>
 				
-				<tr>&emsp;
+				<tr>
 					<td id="mai">주소</td> 
-					<td><input type="text" size="70" name="addr"
+					<td><input type="text" size="50" name="addr"
 						required="required" class="from-cintol"></td>
 				</tr>
 				
