--- a/bin/main/templates/logintool/signup2.html
+++ b/bin/main/templates/logintool/signup2.html
@@ -6,131 +6,201 @@
 <link href="../static/css/writeday.css" rel="stylesheet" th:href="@{/css/writeday.css}" />
 <noscript><link rel="stylesheet" href="static/css/noscript.css" /></noscript>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <title>회원가입 페이지</title>
 
 
 
 </head>
-<body class="index is-preload">
-		
-
-					<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a th:href="@{'/'}">Will</a></h1>
-				</header>
-
+<body cellpadding="0" cellspacing="0" marginleft="0" background-color="white" margintop="0" width="100%" height="100%" align="center">
+    <h1 id="logo" align="center"><a th:href="@{'/'}"><img src="../images/logo.jpg" alt="로드불가" height="80px" width="110px" margin-bottom="30px"/></a></h1>
+<br>
 
 
 
 	<form th:action="@{/user/signup}" method="post">
 
 		<div id="tit">
-			<br> <b><font size="6" color="gold">회원가입</font></b> <br>
-			<br>
+			
 
 			<div class="buttons">
 				
 			<span>	
-				<input id="btn1" type="checkbox"  onclick="location.href='http://localhost:8886/user/signup3'">변호사/공증인</span>
+				<h5><input id="btn1" type="checkbox"  onclick="location.href='http://localhost:8886/user/signup3'">변호사/공증인</span></h5>
 
-			</div>
+			</div><br>
 
 
 
-			<table>
-				<tr>
-					<td  id="mai">이름</td>
-					<td colspan="2" align="left">&emsp;<input type="text"
-						name="name" autofocus="autofocus" required="required"
-						class="from-cintol" placeholder="이름을 입력하세요">
+			
+		<table>
+               <tr>
+					<td id="mai" >이름</td> 
+					<td colspan="1" align="left"><input type="text" name="name"
+						autofocus="autofocus" required="required" class="from-cintol" placeholder="이름을 입력하세요">
 					</td>
 				</tr>
-
-				<tr>
-					<td id="mai">아이디</td>
-					<td colspan="2" align="left">&emsp;
-					<input type="text" name="id" class="userid" placeholder="Id를 입력하세요">
-				<!-- 	<input type="button"class="myButton" id="temp" value="중복확인"> -->
-					
-				<div class="text-center small mt-2" id="checkMsg"></div>
-						
+                        
+                <tr>
+					<td id="mai">아이디</td> 
+					<td colspan="2" align="left">
+					<input type="text"  name="id" required="required"class="userid" placeholder="Id를 입력하세요">
+	<!-- 				 <input type="button" class="myButton" id="temp" value="중복확인"> -->
+				
 					</td>
 				</tr>
 
 
 				<tr>
 					<td id="mai">비밀번호</td>
-					<td colspan="1" align="left">&emsp;<input type="password"
-						name="password" maxlength="50" placeholder="비밀번호를  입력하세요">
+					<td colspan="1" align="left" ><input type="password" name="password" maxlength="50" placeholder="비밀번호를  입력하세요">
 					</td>
 				</tr>
 
-				<!-- <tr>
+				 <tr>
 					<td id="mai" >비밀번호 확인</td>
-					<td colspan="1" align="left">&emsp;<input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
+					<td colspan="1" align="left"><input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
 					</td>
-				</tr> -->
-
-
-
-				<tr>
-					<td id="mai">이메일</td>
-					<td colspan="1" align="left">&emsp; <input type="text"
-						name="email" required="required" maxlength="50">
-					</td>
-				</tr>
-
-
-
-
-
-				<tr>
-					<td id="mai">생년월일</td>
-					<td colspan="1" align="left">&emsp;<input type="date"
-						name="birthdate" required="required" class="from-cintol"></td>
-				</tr>
-
-				<tr>
-					<td id="mai">성별</td>
-					<td colspan="1" align="left">&emsp; <input type="radio"
-						name="gender" value="남" checked>남 <input type="radio"
-						name="gender" value="여" checked>여
-					</td>
-				</tr>
-
-
-
-				<tr>
-					<td id="mai">핸드폰</td>
-					<td colspan="2" align="left">&emsp; <input type="text"
-						name="hp" required="required" maxlength="50">
-					</td>
-
-				</tr>
-
-				<tr>
-					&emsp;
-					<td id="mai">주소</td>
-					<td><input type="text" size="70" name="addr"
+				</tr> 
+                   
+                                 
+                <tr>
+                    <td id="mai">이메일</td>
+                    <td colspan="1" align="left"> 
+                        <input  type="text" name="email" required="required" maxlength="50" placeholder="email을 입력하세요">
+                    </td>
+                </tr>
+                    
+                    
+                    
+                    
+                    
+             	<tr>
+					<td id="mai">생년월일</td> 
+					<td colspan="1" align="left"> <input type="date" name="birthdate"
 						required="required" class="from-cintol"></td>
 				</tr>
+				
+            	 <tr>
+                    <td id="mai">성별</td> 
+                    <td colspan="1" align="left"> 
+                        <input type="radio" name="gender" value="남" checked>남 
+                        <input type="radio" name="gender" value="여" checked>여
+                    </td>
+                </tr>
+                    
+                    
+     
+                <tr>
+					<td id="mai">핸드폰</td>
+				<td colspan="2" align="left"> 
+                        <input type="text" name="hp"  required="required" maxlength="50" placeholder="번호만 입력하세요">
+                    </td>
+					
+				</tr>
+				
+				<tr>
+					<td id="mai">주소</td> 
+					<td colspan="1" align="left"><input type="text" size="50" name="addr"
+						required="required" class="from-cintol" placeholder="상세주소를 입력하세요"></td>
+				</tr>
+				
 
 
-
-
+				
+		
 			</table>
 			<br>
 			<br>
-			<tr>
-				<td colspan="2" align="center"><input type="submit"
-					value="회원가입"> <input type="button" value="취소" onclick="location.href='http://localhost:8886/user/login'">
+			<tr id="sin">
+				<td colspan="2" align="center"><input type="submit" class="animationbutton"
+					value="회원가입"> <input type="button" class="animationbutton" value="취소" onclick="location.href='http://localhost:8886/user/login'">
 				</td>
-			</tr>
-	</form>
+			</tr><br><br>
+    </form>
+    
+
+<!-- 
+				<label>이름</label>
+
+
+			<div id="mai">
+				<span> <input type="text" name="name" autofocus="autofocus"
+					required="required" class="from-cintol" placeholder="이름을 입력하세요">
+				</span>
+			</div>
+			<br>
+
+
+				<label>아이디</label>
+			<div id="mai">
+				<span> <input type="text" name="id" class="userid"
+					placeholder="Id를 입력하세요">  <input type="button"class="myButton" id="temp" value="중복확인">
+				</span>
+			</div>
+			<br>
+
+
+				<label>비밀번호</label>
+			<div id="mai">
+				<span> <input type="password" name="password" maxlength="50"
+					placeholder="비밀번호를  입력하세요">  <input type="button"class="myButton" id="temp" value="중복확인">
+				</span>
+			</div>
+			<br>
+
+
+				<label>이메일</label>
+			<div id="mai">
+				<span> <input type="text" name="email" required="required"
+					maxlength="50" placeholder="email을  입력하세요">
+				</span>
+			</div>
+			<br>
 
 
 
+				<label>생년월일</label>
+			<div id="mai">
+				<span> <input type="date" name="birthdate"
+					required="required" class="from-cintol">
+				</td>
+				</span>
+			</div>
+			<br>
+
+
+			
+				<label>성별</label>
+			<div id="mai">
+				<span> <input type="radio" name="gender" value="남" checked>남
+					<input type="radio" name="gender" value="여" checked>여
+				</span>
+			</div>
+			<br>
+
+
+
+				<label>핸드폰</label>
+			<div id="mai">
+				<span> <input type="text" name="hp" required="required"
+					maxlength="50">
+				</span>
+			</div>
+			<br>
+
+
+
+				<label>주소</label>
+			<div id="mai">
+				<span> <input type="text" size="70" name="addr"
+					required="required" class="from-cintol" placeholder="상세주소를  입력하세요">
+				</span>
+			</div>
+			<br>
+
+
+ -->
 
 
 
