--- a/bin/main/templates/logintool/signup3.html
+++ b/bin/main/templates/logintool/signup3.html
@@ -5,53 +5,41 @@
 
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link  href="../static/css/iogin.css" rel="stylesheet"  th:href="@{/css/login.css}" />
+		<link href="../static/css/writeday1.css" rel="stylesheet" th:href="@{/css/writeday1.css}" />
 		<noscript><link rel="stylesheet" href="static/css/noscript.css" /></noscript>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   
     <title>로그인 </title>
 </head>
 <body cellpadding="0" cellspacing="0" marginleft="0" background-color="white" margintop="0" width="100%" height="100%" align="center">
     <h1 id="logo" align="center"><a th:href="@{'/'}"><img src="../images/logo.jpg" alt="로드불가" height="80px" width="110px" margin-bottom="30px"/></a></h1>
-    <hr>
+    <br>
 
-   
-		<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a th:href="@{'/'}">Will</a></h1>
-				</header>
-	
-
-
-
-    <form th:action="@{/user/signup}" method="post">
+   <form th:action="@{/user/signup1}" method="post">
        
  	<div id="tit">
-        <br>
-        <b><font size="6" color="gold">변호사 회원가입</font></b>
-        <br><br>
+        
 
 		<div  class="buttons">
  <span>	
-				<input id="btn" type="checkbox"  onclick="location.href='http://localhost:8886/user/signup2'">작성자</span>
+				<h3><input id="btn" type="checkbox"  onclick="location.href='http://localhost:8886/user/signup2'">작성자</span></div></h3>
 
-</div> 
-
+</div>
 
 
 		<table>
                <tr>
 					<td id="mai" >이름</td> 
-					<td colspan="1" align="left">&emsp;<input type="text" name="name"
+					<td colspan="1" align="left"><input type="text" name="name"
 						autofocus="autofocus" required="required" class="from-cintol" placeholder="이름을 입력하세요">
 					</td>
 				</tr>
                         
                 <tr>
 					<td id="mai">아이디</td> 
-					<td colspan="2" align="left">&emsp;
+					<td colspan="2" align="left">
 					<input type="text"  name="id" required="required"class="userid" placeholder="Id를 입력하세요">
 	<!-- 				 <input type="button" class="myButton" id="temp" value="중복확인"> -->
 				
@@ -61,42 +49,41 @@
 
 				<tr>
 					<td id="mai">비밀번호</td>
-					<td colspan="1" align="left" >&emsp;<input type="password" name="password" maxlength="50" placeholder="비밀번호를  입력하세요">
+					<td colspan="1" align="left" ><input type="password" name="password" maxlength="50" placeholder="비밀번호를  입력하세요">
 					</td>
 				</tr>
 
-				<!-- <tr>
+				 <tr>
 					<td id="mai" >비밀번호 확인</td>
-					<td colspan="1" align="left">&emsp;<input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
+					<td colspan="1" align="left"><input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
 					</td>
-				</tr> -->
+				</tr> 
                    
-             <tr>
-					<td id="mai">신분증 번호</td>
-					<td colspan="1" align="left" >&emsp;<input type="text" size="35" name="proof" maxlength="50" placeholder="변호사증 넘버을 입력하세요">
-					</td>
-				</tr>
-                    
+                                 
                 <tr>
                     <td id="mai">이메일</td>
-                    <td colspan="1" align="left"> &emsp;
-                        <input  type="text" name="email" required="required" maxlength="50">
+                    <td colspan="1" align="left"> 
+                        <input  type="text" name="email" required="required" maxlength="50" placeholder="email을 입력하세요">
                     </td>
                 </tr>
-                    
-                    
-                    
-                    
-                    
-             	<tr>
+
+
+			<tr>
+				<td id="mai">신분증 번호</td>
+				<td colspan="1" align="left"><input type="text" size="35"
+					name="proof" maxlength="50" placeholder="변호사증 넘버을 입력하세요"></td>
+			</tr>
+
+
+			<tr>
 					<td id="mai">생년월일</td> 
-					<td colspan="1" align="left"> &emsp;<input type="date" name="birthdate"
+					<td colspan="1" align="left"> <input type="date" name="birthdate"
 						required="required" class="from-cintol"></td>
 				</tr>
 				
             	 <tr>
                     <td id="mai">성별</td> 
-                    <td colspan="1" align="left"> &emsp;
+                    <td colspan="1" align="left"> 
                         <input type="radio" name="gender" value="남" checked>남 
                         <input type="radio" name="gender" value="여" checked>여
                     </td>
@@ -106,34 +93,28 @@
      
                 <tr>
 					<td id="mai">핸드폰</td>
-				<td colspan="2" align="left"> &emsp;
-                        <input type="text" name="hp"  required="required" maxlength="50">
+				<td colspan="2" align="left"> 
+                        <input type="text" name="hp"  required="required" maxlength="50" placeholder="번호만 입력하세요">
                     </td>
 					
 				</tr>
 				
-				<tr>&emsp;
+				<tr>
 					<td id="mai">주소</td> 
-					<td><input type="text" size="70" name="addr"
-						required="required" class="from-cintol"></td>
+					<td colspan="1" align="left"><input type="text" size="50" name="addr"
+						required="required" class="from-cintol" placeholder="상세주소를 입력하세요"></td>
 				</tr>
-				
-
-
-				
-		</table>
-		<br><br>
-			<tr>
-				<td colspan="2" align="center">
-					<input  type="submit" value="회원가입">
-					<input type="button" value="취소" onclick="location.href='http://localhost:8886/user/login'">
+				</table>
+			<br>
+			<br>
+			<tr id="sin">
+				<td colspan="2" align="center"><input type="submit" class="animationbutton"
+					value="회원가입"> <input type="button" class="animationbutton" value="취소" onclick="location.href='http://localhost:8886/user/login'">
 				</td>
-			</tr>
+			</tr><br><br>
     </form>
     
 
     
-</body>
-</html>
 </body>
 </html>
