--- a/bin/main/templates/logintool/signup2.html
+++ b/bin/main/templates/logintool/signup2.html
@@ -2,9 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<link href="../static/css/writeday.css" rel="stylesheet" th:href="@{/css/writeday.css}" /> 
-<noscript><link rel="stylesheet" href="static/css/noscript.css" /></noscript>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+<link href="../static/css/writeday.css" rel="stylesheet" th:href="@{/css/writeday.css}"/>
+<noscript>
+<link rel="stylesheet" href="static/css/noscript.css"/>
+</noscript>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 <style type="text/css">
@@ -13,228 +15,107 @@ font-family: 'Noto Sans KR', sans-serif;
 font-size: 2em;
 font-weight:300;
 }
-
 </style>
 <title>Will : 회원가입</title>
-
-
-
 </head>
-
-<body cellpadding="0" cellspacing="0" marginleft="0" background-color="white" margintop="0" width="100%" height="100%" align="center">
-    <h1 id="logo" align="center"><a th:href="@{'/'}"><img src="../images/logo.jpg" alt="로드불가" height="80px" width="110px" margin-bottom="30px"/></a></h1>
-<br>
-
-
-
-
-	<form th:action="@{/user/signup}" method="post">
-
-		<div id="tit">
-
-			
-
-			<div class="button">
-				
-			<span>	
-				<h5><input id="btn1" type="checkbox"  onclick="location.href='http://localhost:8886/user/signup3'">변호사/공증인</span></h5>
-
-			</div><br>
-
-
-
-			<table>
-				<tr>
-					<td  id="mai">이름</td>
-					<td colspan="2" align="left"><input type="text"
-						name="name" autofocus="autofocus" required="required"
-						class="from-cintol" placeholder="이름을 입력하세요">
-					</td>
-				</tr>
-
-				<tr>
-					<td id="mai">아이디</td>
-					<td colspan="2" align="left">
-					<input type="text" name="id" class="userid" placeholder="아이디를 입력하세요">
-				<!-- 	<input type="button"class="myButton" id="temp" value="중복확인"> -->
-					
-				<div class="text-center small mt-2" id="checkMsg"></div>
-						
-
+<body class="index is-preload">
+<!-- Header -->
+<header id="header">
+<h1 id="logo"><a th:href="@{'/'}"></a></h1>
+</header>
+<form th:action="@{/user/signup}" method="post">
+	<div id="tit">
 	
-					</td>
-				</tr>
-
-
-				<tr>
-					<td id="mai">비밀번호</td>
-					<td colspan="1" align="left" ><input type="password" name="password" maxlength="50" placeholder="비밀번호를  입력하세요">
-
-					</td>
-				</tr>
-
-				 <tr>
-					<td id="mai" >비밀번호 확인</td>
-					<td colspan="1" align="left"><input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
-					</td>
-				</tr> 
-
-                   
-                                 
-                <tr>
-                    <td id="mai">이메일</td>
-                    <td colspan="1" align="left"> 
-                        <input  type="text" name="email" required="required" maxlength="50" placeholder="email을 입력하세요">
-                    </td>
-                </tr>
-                    
-                    
-                    
-                    
-                    
-             	<tr>
-					<td id="mai">생년월일</td> 
-					<td colspan="1" align="left"> <input type="date" name="birthdate"
-						required="required" class="from-cintol"></td>
-				</tr>
-				
-            	 <tr>
-                    <td id="mai">성별</td> 
-                    <td colspan="1" align="left"> 
-                        <input type="radio" name="gender" value="남" checked>남 
-                        <input type="radio" name="gender" value="여" checked>여
-                    </td>
-                </tr>
-                    
-                    
-     
-                <tr>
-					<td id="mai">핸드폰</td>
-				<td colspan="2" align="left"> 
-                        <input type="text" name="hp"  required="required" maxlength="50" placeholder="번호만 입력하세요">
-                    </td>
-					
-				</tr>
-				
-				<tr>
-					<td id="mai">주소</td> 
-					<td colspan="1" align="left"><input type="text" size="50" name="addr"
-						required="required" class="from-cintol" placeholder="상세주소를 입력하세요"></td>
-
-				</tr>
-				
-
-
-				
-		
-			</table>
-			<br>
-			<br>
-			<tr id="sin">
-				<td colspan="2" align="center"><input type="submit" class="animationbutton"
-					value="회원가입"> <input type="button" class="animationbutton" value="취소" onclick="location.href='http://localhost:8886/user/login'">
-				</td>
-			</tr><br><br>
-    </form>
-    
-
-<!-- 
-				<label>이름</label>
-
-
-				<tr>
-					<td id="mai">생년월일</td>
-					<td colspan="1" align="left"><input type="date"
-						name="birthdate" required="required" class="from-cintol"></td>
-				</tr>
-
-				<tr>
-					<td id="mai">성별</td>
-					<td colspan="1" align="left"> <input type="radio"
-						name="gender" value="남" checked>남 <input type="radio"
-						name="gender" value="여" checked>여
-					</td>
-				</tr>
-
-				<label>아이디</label>
-			<div id="mai">
-				<span> <input type="text" name="id" class="userid"
-					placeholder="Id를 입력하세요">  <input type="button"class="myButton" id="temp" value="중복확인">
-				</span>
-			</div>
-			<br>
-
-
-
-				<tr>
-					<td id="mai">핸드폰</td>
-					<td colspan="2" align="left"><input type="text"
-						name="hp" required="required" maxlength="50">
-					</td>
-
-
-
-				<tr>
-				
-					<td id="mai">주소</td>
-					<td><input type="text" size="60" name="addr"
-						required="required" class="from-cintol" margin-left="0px"></td>
-				</tr>
-
-
-
-				<label>생년월일</label>
-			<div id="mai">
-				<span> <input type="date" name="birthdate"
-					required="required" class="from-cintol">
-				</td>
-				</span>
-			</div>
-			<br>
-
-
-			
-				<label>성별</label>
-			<div id="mai">
-				<span> <input type="radio" name="gender" value="남" checked>남
-					<input type="radio" name="gender" value="여" checked>여
-				</span>
-			</div>
-			<br>
-
-
-
-				<label>핸드폰</label>
-			<div id="mai">
-				<span> <input type="text" name="hp" required="required"
-					maxlength="50">
-				</span>
-			</div>
-			<br>
-
-			<tr>
-				<td colspan="2"><input align="center" type="submit"class="animationbutton" 
-					value="회원가입"> <input type="button" class="animationbutton" value="취소" onclick="location.href='http://localhost:8886/user/login'">
-				</td>
-			</tr>
+		<b><img src="../images/logo.jpg" alt="로드불가" height="70px" width="110px"/></b><br>
+		<br>
+		<div class="button">
+			<span>
+			<input id="btn1" type="checkbox" onclick="location.href='http://localhost:8886/user/signup3'">변호사/공증인</span>
+		</div><br>
+		<table>
+		<tr>
+			<td id="mai">
+				이름
+			</td>
+			<td colspan="2" align="left">
+				<input type="text" name="name" autofocus="autofocus" required="required" class="from-cintol" placeholder="이름을 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				아이디
+			</td>
+			<td colspan="2" align="left">
+				<input type="text" name="id" class="userid" placeholder="아이디를 입력하세요">
+				<!-- 	<input type="button"class="myButton" id="temp" value="중복확인"> -->
+				<div class="text-center small mt-2" id="checkMsg">
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				비밀번호
+			</td>
+			<td colspan="1" align="left">
+				<input type="password" name="password" maxlength="50" placeholder="비밀번호를 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				비밀번호 확인
+			</td>
+			<td colspan="1" align="left">
+				<input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				이메일
+			</td>
+			<td colspan="1" align="left">
+				<input type="text" name="email" required="required" maxlength="50" placeholder="Email을 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				생년월일
+			</td>
+			<td colspan="1" align="left">
+				<input type="date" name="birthdate" required="required" class="from-cintol">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				성별
+			</td>
+			<td colspan="1" align="left">
+				<input type="radio" name="gender" value="남" checked>남 <input type="radio" name="gender" value="여" checked>여
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				핸드폰
+			</td>
+			<td colspan="2" align="left">
+				<input type="text" name="hp" required="required" maxlength="50" placeholder="번호만 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				주소
+			</td>
+			<td colspan="2" align="left">
+				<input type="text" size="60" name="addr" required="required" class="from-cintol" margin-left="0px" placeholder="상세주소를 입력하세요">
+			</td>
+		</tr>
+		</table>
+		<br>
+		<br>
+		<tr>
+			<td colspan="2">
+				<input align="center" type="submit" class="animationbutton" value="회원가입"><input type="button" class="animationbutton" value="취소" onclick="location.href='http://localhost:8886/user/login'">
+			</td>
+		</tr>
 	</form>
-
-
-
-
-				<label>주소</label>
-			<div id="mai">
-				<span> <input type="text" size="70" name="addr"
-					required="required" class="from-cintol" placeholder="상세주소를  입력하세요">
-				</span>
-			</div>
-			<br>
-
-
- -->
-
-
-
-
-</body>
-</html>
+	</body>
+	</html>
