--- a/src/main/resources/static/css/myinfo.css
+++ b/src/main/resources/static/css/myinfo.css
@@ -1,17 +1,57 @@
 @charset "UTF-8";
+@import url("fontawesome-all.min.css");
+.head {
+		ont-family:'Google Sans',Roboto,Arial,sans-serif;
+	font-size:1.75rem;
+	font-weight:400;
+	letter-spacing:0;
+	line-height:2.25rem;
+	hyphens:auto;
+	word-break:break-word;
+	word-wrap:break-word;
+	color:#202124;
+	margin:0 0 8px 0;
+	padding:0;
+	text-align: center;
+}
 
-.head{
-	
-	ont-family: 'Google Sans',Roboto,Arial,sans-serif;
-    font-size: 1.75rem;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 2.25rem;
-    hyphens: auto;
-    word-break: break-word;
-    word-wrap: break-word;
-    color: #202124;
-    margin: 0 0 8px 0;
-    padding: 0;
-    text-align: center;
+	@media screen and (max-width:1680px) {
+			.container {
+					width:1200px;
+	}
+				.container.medium {
+						width:900px;
+	}
+}
+	@media screen and (max-width:1280px) {
+			.container {
+					width:960px;
+	}
+				.container.medium {
+						width:735px;
+	}
+}
+	@media screen and (max-width:980px) {
+			.container {
+					width:95%;
+	}
+				.container.medium {
+						width:71.25%;
+	}
+}
+	@media screen and (max-width:840px) {
+			.container {
+					width:95%;
+	}
+				.container.medium {
+						width:95%;
+	}
+}
+	@media screen and (max-width:736px) {
+			.container {
+					width:100%;
+	}
+				.container.medium {
+						width: 100%;
+	}
 }
