--- a/src/main/resources/templates/com/benner.html
+++ b/src/main/resources/templates/com/benner.html
@@ -6,32 +6,25 @@
 </head>
 <body>
 <section id="banner">
-
-					<!--
+<!--
 						".inner" is set up as an inline-block so it automatically expands
 						in both directions to fit whatever's inside it. This means it won't
 						automatically wrap lines, so be sure to use line breaks where
 						appropriate (<br />).
 					-->
-					<div class="inner">
-
-						<header>
-							<h2>WILL</h2>
-						</header>
-						<p>그대에게 <strong>꼭 전하고</strong> 싶은
-						<br />
-						것을 전해드립니다.
-						<br />
-						by..
-						<footer>
-							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">공증이란</a></li>
-							</ul>
-						</footer>
-
-					</div>
-
-				</section>
-
-</body>
-</html>
+<div class="inner">
+	<header>
+	<h2>WILL</h2>
+	</header>
+	<p>
+		그대에게 <strong>꼭 전하고</strong> 싶은 <br/>
+		것을 전해드립니다. <br/>
+		by.. <footer>
+		<ul class="buttons stacked">
+			<li><a href="#main" class="button fit scrolly">공증이란</a></li>
+		</ul>
+		</footer>
+	</div>
+	</section>
+	</body>
+	</html>
