--- a/src/main/resources/templates/com/header.html
+++ b/src/main/resources/templates/com/header.html
@@ -1,76 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link  href="../static/css/main.css" rel="stylesheet"  th:href="@{/css/main.css}" />
-		<noscript><link rel="stylesheet" href="static/css/noscript.css"  th:href="@{/css/noscript.css}"/></noscript>
-		  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
- 
-	</head>
-
-		
-	
-	<body class="index is-preload">
-		<div id="page-wrapper">
-
-						<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a th:href="@{'/'}">Will</a></h1>
-					<nav id="nav">
-						<ul>
-							<li id="create"><a sec:authorize="hasRole('ROLE_MEMBER')" th:href="@{/user/createwill}">문서작성</a></li>
-							<li id="create"><a sec:authorize="hasRole('ROLE_LAWYER')" th:href="@{/user/will/list}">문서수정</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a sec:authorize="isAnonymous()" th:href="@{/guidance}">절차안내</a></li>
-								
-								</ul>
-							</li>
-	
-							<li class="submenu">
-								<a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
-   								<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/uesr/admin}">어드민</a>
-							</li>&nbsp;
-
-								
-			
-		
-		
-			<li class="submenu">
-                        <a sec:authorize="isAuthenticated()" > <span sec:authentication="name"></span>님</a>
-                        
-                    
-                           <ul>
-                           <li><a sec:authorize="hasRole('ROLE_MEMBER')" th:href=" @{/user/info}">내 정보</a></li>
-                           <li><a sec:authorize="hasRole('ROLE_LAWYER')" th:href=" @{/lawyer/user/info}">내 정보</a></li>                         
- 
-                        </ul>   
-                       
-                        
-                  
-		
-							
-						<li><a sec:authorize="isAnonymous()"th:href="@{/user/login}"  class="button primary">Login</a></li>
-						<li><a sec:authorize="isAuthenticated()" th:href="@{/user/logout}" class="button primary">Logout</a></li>
-						</ul>
-						
-						
-						
-						
-						
-						
-					</nav>
-				</header>
-
-			
-				
-				
-	</div>
-	</body>
-	</html>
-				
-				
-				
-		
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+<link href="../static/css/main.css" rel="stylesheet" th:href="@{/css/main.css}"/>
+<noscript>
+<link rel="stylesheet" href="static/css/noscript.css" th:href="@{/css/noscript.css}"/>
+</noscript>
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+</head>
+<body class="index is-preload">
+<div id="page-wrapper">
+	<!-- Header -->
+	<header id="header">
+	<h1 id="logo"><a th:href="@{'/'}">Will</a></h1>
+	<nav id="nav">
+	<ul>
+		<li id="create"><a sec:authorize="hasRole('ROLE_MEMBER')" th:href="@{/user/createwill}">문서작성</a></li>
+		<li id="create"><a sec:authorize="hasRole('ROLE_LAWYER')" th:href="@{/user/will/list}">문서수정</a></li>
+		<li class="submenu">
+		<a href="#">Layouts</a>
+		<ul>
+			<li><a sec:authorize="isAnonymous()" th:href="@{/guidance}">절차안내</a></li>
+		</ul>
+		</li>
+		<li class="submenu">
+		<a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
+		<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/uesr/admin}">어드민</a>
+		</li>
+		&nbsp;
+		<li class="submenu">
+		<a sec:authorize="isAuthenticated()"><span sec:authentication="name"></span>님</a>
+		<ul>
+			<li><a sec:authorize="hasRole('ROLE_MEMBER')" th:href=" @{/user/info}">내 정보</a></li>
+			<li><a sec:authorize="hasRole('ROLE_LAWYER')" th:href=" @{/lawyer/user/info}">내 정보</a></li>
+		</ul>
+		<li><a sec:authorize="isAnonymous()" th:href="@{/user/login}" class="button primary">Login</a></li>
+		<li><a sec:authorize="isAuthenticated()" th:href="@{/user/logout}" class="button primary">Logout</a></li>
+	</ul>
+	</nav>
+	</header>
+</div>
+</body>
+</html>
