--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -55,16 +55,15 @@
 			<!-- Main -->
 				<article id="main">
 
-					<header class="special container" ><span><img alt="로드불가" src="../images/psb.png" class="icon solid fa-chart-bar"></span>
+					<header class="special container" ><span><img alt="로드불가" src="../images/psb.png"  height="50px" width="100px"class="icon solid fa-chart-bar"></span>
 						<!-- <span class="icon solid fa-chart-bar"> --> <!-- </span> -->
 					
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<h2>우리의 법률생활에서 생기는 여러 상황을 <strong><U>공적으로 증명</U></strong> 중요한 거래에 관하여 <U><strong><br/>증거를 보전하고 권리자의 권리 실행</strong></U>을 용이하게 하기 위하여 사실을</br/> <U><strong>증명하여 주는 제도</strong></U>를 말합니다.
 						<br />
-						I decided to give it a really creative name.</h2>
+						</h2>
 						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
 						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
+						
 						<br />
 						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
 					</header>
