--- a/src/main/resources/templates/logintool/searchPass.html
+++ b/src/main/resources/templates/logintool/searchPass.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.css">
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.js"></script><html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
 <div th:insert="com/header.html" ></div>
-
+ 
 	<div class="container-login100">
 		<div class="wrap-login100 p-l-55 p-r-55 p-t-50 p-b-30">
-			<form th:action="@{/user/login/result}" method="post" class="login100-form validate-form">
+			<form th:action="@{searchPass}" method="get" class="login100-form validate-form">
 			
 			
 				<div style="color: #ac2925">
@@ -34,13 +36,14 @@
 				<div class="text-center small mt-2" id="checkMsg" style="color: red"></div>
 
 				<div class="text-center">
-					<a sec:authorize="isAnonymous()" th:href="@{/login}" class="txt2 hov1">
+					<a sec:authorize="isAnonymous()" th:href="@{user/login}" class="txt2 hov1">
 						Cancel
 					</a>
 				</div>
 			</form>			
 		</div>
 	</div>
+	
 	<script>
 
     $('.modal').on('hidden.bs.modal', function (e) {
@@ -93,7 +96,7 @@
 </script>
 	
 	
-	<div id="dropDownSelect1"></div>
+
 	
 	<div th:insert="com/footer.html" ></div>
 </body>
