--- a/src/main/resources/templates/logintool/signup2.html
+++ b/src/main/resources/templates/logintool/signup2.html
@@ -2,9 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<link href="../static/css/writeday.css" rel="stylesheet" th:href="@{/css/writeday.css}" /> 
-<noscript><link rel="stylesheet" href="static/css/noscript.css" /></noscript>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+<link href="../static/css/writeday.css" rel="stylesheet" th:href="@{/css/writeday.css}"/>
+<noscript>
+<link rel="stylesheet" href="static/css/noscript.css"/>
+</noscript>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 <style type="text/css">
@@ -13,135 +15,107 @@ font-family: 'Noto Sans KR', sans-serif;
 font-size: 2em;
 font-weight:300;
 }
-
 </style>
 <title>Will : 회원가입</title>
-
-
-
 </head>
 <body class="index is-preload">
-		
-
-					<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a th:href="@{'/'}"></a></h1>
-				</header>
-
-
-
-
-	<form th:action="@{/user/signup}" method="post">
-
-		<div id="tit">
-			<br> <b><img src="../images/logo.jpg" alt="로드불가" height="70px" width="110px" /></b> <br>
-			<br>
-
-			<div class="button">
-				
-			<span>	
-				<input id="btn1" type="checkbox"  onclick="location.href='http://localhost:8886/user/signup3'">변호사/공증인</span>
-
-			</div>
-
-
-
-			<table>
-				<tr>
-					<td  id="mai">이름</td>
-					<td colspan="2" align="left"><input type="text"
-						name="name" autofocus="autofocus" required="required"
-						class="from-cintol" placeholder="이름을 입력하세요">
-					</td>
-				</tr>
-
-				<tr>
-					<td id="mai">아이디</td>
-					<td colspan="2" align="left">
-					<input type="text" name="id" class="userid" placeholder="아이디를 입력하세요">
+<!-- Header -->
+<header id="header">
+<h1 id="logo"><a th:href="@{'/'}"></a></h1>
+</header>
+<form th:action="@{/user/signup}" method="post">
+	<div id="tit">
+	
+		<b><img src="../images/logo.jpg" alt="로드불가" height="70px" width="110px"/></b><br>
+		<br>
+		<div class="button">
+			<span>
+			<input id="btn1" type="checkbox" onclick="location.href='http://localhost:8886/user/signup3'">변호사/공증인</span>
+		</div><br>
+		<table>
+		<tr>
+			<td id="mai">
+				이름
+			</td>
+			<td colspan="2" align="left">
+				<input type="text" name="name" autofocus="autofocus" required="required" class="from-cintol" placeholder="이름을 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				아이디
+			</td>
+			<td colspan="2" align="left">
+				<input type="text" name="id" class="userid" placeholder="아이디를 입력하세요">
 				<!-- 	<input type="button"class="myButton" id="temp" value="중복확인"> -->
-					
-				<div class="text-center small mt-2" id="checkMsg"></div>
-						
-					</td>
-				</tr>
-
-
-				<tr>
-					<td id="mai">비밀번호</td>
-					<td colspan="1" align="left"><input type="password"
-						name="password" maxlength="50" placeholder="비밀번호를  입력하세요">
-					</td>
-				</tr>
-
-				 <tr>
-					<td id="mai" >비밀번호 확인</td>
-					<td colspan="1" align="left"><input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
-					</td>
-				</tr> 
-
-
-
-				<tr>
-					<td id="mai">이메일</td>
-					<td colspan="1" align="left"> <input type="text"
-						name="email" required="required" maxlength="50">
-					</td>
-				</tr>
-
-
-
-
-
-				<tr>
-					<td id="mai">생년월일</td>
-					<td colspan="1" align="left"><input type="date"
-						name="birthdate" required="required" class="from-cintol"></td>
-				</tr>
-
-				<tr>
-					<td id="mai">성별</td>
-					<td colspan="1" align="left"> <input type="radio"
-						name="gender" value="남" checked>남 <input type="radio"
-						name="gender" value="여" checked>여
-					</td>
-				</tr>
-
-
-
-				<tr>
-					<td id="mai">핸드폰</td>
-					<td colspan="2" align="left"><input type="text"
-						name="hp" required="required" maxlength="50">
-					</td>
-
-				</tr>
-
-				<tr>
-				
-					<td id="mai">주소</td>
-					<td><input type="text" size="60" name="addr"
-						required="required" class="from-cintol" margin-left="0px"></td>
-				</tr>
-
-
-
-
-			</table>
-			<br>
-			<br>
-			<tr>
-				<td colspan="2"><input align="center" type="submit"class="animationbutton" 
-					value="회원가입"> <input type="button" class="animationbutton" value="취소" onclick="location.href='http://localhost:8886/user/login'">
-				</td>
-			</tr>
+				<div class="text-center small mt-2" id="checkMsg">
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				비밀번호
+			</td>
+			<td colspan="1" align="left">
+				<input type="password" name="password" maxlength="50" placeholder="비밀번호를 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				비밀번호 확인
+			</td>
+			<td colspan="1" align="left">
+				<input type="password" name="passwordcheck" maxlength="50" placeholder="동일하게 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				이메일
+			</td>
+			<td colspan="1" align="left">
+				<input type="text" name="email" required="required" maxlength="50" placeholder="Email을 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				생년월일
+			</td>
+			<td colspan="1" align="left">
+				<input type="date" name="birthdate" required="required" class="from-cintol">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				성별
+			</td>
+			<td colspan="1" align="left">
+				<input type="radio" name="gender" value="남" checked>남 <input type="radio" name="gender" value="여" checked>여
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				핸드폰
+			</td>
+			<td colspan="2" align="left">
+				<input type="text" name="hp" required="required" maxlength="50" placeholder="번호만 입력하세요">
+			</td>
+		</tr>
+		<tr>
+			<td id="mai">
+				주소
+			</td>
+			<td colspan="2" align="left">
+				<input type="text" size="60" name="addr" required="required" class="from-cintol" margin-left="0px" placeholder="상세주소를 입력하세요">
+			</td>
+		</tr>
+		</table>
+		<br>
+		<br>
+		<tr>
+			<td colspan="2">
+				<input align="center" type="submit" class="animationbutton" value="회원가입"><input type="button" class="animationbutton" value="취소" onclick="location.href='http://localhost:8886/user/login'">
+			</td>
+		</tr>
 	</form>
-
-
-
-
-
-
-
-</body>
-</html>
+	</body>
+	</html>
