--- a/src/main/resources/templates/will/detail.html
+++ b/src/main/resources/templates/will/detail.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title" th:text="@{${post.title} + ' - ' + ${post.id}}"></h5>
+            <h5 class="card-title" th:text="@{${post.title} + ' - ' + ${post.memberId}}"></h5>
              <h4 style="color: black;"><strong>작성일</strong></h4>
             <p class="card-text"><small class="text-muted" th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm')}"></small></p>
             <h4 style="color: black;"><strong>내용</strong></h4>
