--- a/src/main/resources/templates/will/list.html
+++ b/src/main/resources/templates/will/list.html
@@ -28,7 +28,7 @@
                 <span th:text="${post.no}"></span>
             </th>
             <td>
-                <span th:text="${post.id}"></span>
+                <span th:text="${post.memberId}"></span>
             </td>
             <td>
                 <a th:href="@{'/createwill/' + ${post.no}}">
