--- a/src/main/resources/templates/will/list.html
+++ b/src/main/resources/templates/will/list.html
@@ -49,7 +49,7 @@
         </tbody>
     </table>
     <th:block layout:fragment="paging">
-				<nav aria-label="Page navigation" class="text-center">
+				<nav aria-label="Page navigation" class="text-left">
 					<ul class="pagination">
 						<li>
 							<a href="#" aria-label="Previous">
